fix spacing in contacts

--- a/style.css
+++ b/style.css
@@ -74,6 +74,6 @@ keyPoints {
 
 #contacts li, #skills li, #languages li {
     margin-left: 15px;
-    margin-right: 10px;
+    margin-right: 4px;
     float:left;
 }
